--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,37 @@
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
+*.class
 
-# Folder config file
-Desktop.ini
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
 
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
+# Package Files #
+*.jar
+*.war
+*.ear
 
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
 
-# Windows shortcuts
-*.lnk
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm
+*.iml
 
-# =========================
-# Operating System Files
-# =========================
+## Directory-based project format:
+.idea/
 
-# OSX
-# =========================
+## File-based project format:
+*.ipr
+*.iws
 
-.DS_Store
-.AppleDouble
-.LSOverride
+## Plugin-specific files:
+# IntelliJ
+/out/
 
-# Thumbnails
-._*
+# mpeltonen/sbt-idea plugin
+.idea_modules/
 
-# Files that might appear on external disk
-.Spotlight-V100
-.Trashes
+# JIRA plugin
+atlassian-ide-plugin.xml
 
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
